<resources>
    <string name="app_name">BookBorrow-LendV2</string>
    <!-- Strings related to login -->
    <string name="prompt_userName">UserName</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign up</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Borrower">Borrower</string>
    <string name="menu_string_1_1">Click to check your Book notice</string>
    <string name="menu_string_1_0">Book Requested</string>
    <string name="empty"></string>
    <string name="menu_string_2_0">My Book List</string>
    <string name="menu_string_2_1">Click to check your Book List</string>
    <string name="menu_string_3_0">Searching</string>
    <string name="menu_string_3_1">Click to search Book</string>
    <string name="menu_string_4_0">Scan</string>
    <string name="menu_string_4_1">Click to scan your Book</string>
    <string name="borrower_request_view">Borrower Request View</string>
    <string name="request_accept">Request Accept</string>
    <string name="request_unaccept">Watch List</string>
    <string name="rate_info">"Enter the rate(1 - 10): "</string>
    <string name="rate_comment">"Enter the comment: "</string>
    <string name="rate_to_owner">Rate To Owner and Book</string>
    <string name="rate_to_borrower">Rate To Borrower</string>
    <string name="BorrowedBookListText">My Borrowed books</string>
    <string name="title_activity_search">Search</string>
    <string name="bookDetailTitle">Book Detail</string>
    <string name="bookDetailComment">Comment from Borrowers:</string>
    <string name="BookDetailState">State</string>
    <string name="BookDetailDescription">Description from Owner:</string>
    <string name="BookDetailName">"Book Name: "</string>
    <string name="BookDetailISBN">"ISBN: "</string>
    <string name="BookDetailAuthor">Author</string>
    <string name="BookDetail">Details of the Book</string>
    <string name="Rate">Rate</string>
    <string name="BookDetailDelete">Delete</string>
    <string name="BookDetailEdit">Edit</string>
    <string name="BookDetailShowRequest">Requests</string>
    <string name="BookDetailOwner">Owner</string>
    <string name="pBookName">Missing borrower name!</string>
    <string name="pBookISBN">Missing ISBN!</string>
    <string name="pBookAuthor">Missing author!</string>
    <string name="pBookStates">Missing States!</string>
    <string name="pBookOwner">Missing Owner!</string>
    <string name="pBookComment">Missing comment!</string>
    <string name="pBookState">Missing state!</string>
    <string name="pBookImage">private book Image</string>
    <string name="pBookDescription">No description, message owner to add one!</string>
    <string name="pLocationButton">Location</string>
    <string name="pBookRate">No current rating</string>
    <string name="requestTheBook">Request It!</string>
    <string name="BookDetailRequestTheBook">Request It!</string>


    <string name="bookDetailSave">Save</string>
    <string name="BookDetailReturn">Return</string>
    <string name="bookDetailRequestList">Request List:</string>
    <string name="bookDetailLocation">Location:</string>
    <string name="bookDetailDescribtion">Describtion:</string>
    <string name="bookDetailStatus">Status:</string>
    <string name="bookDetailBookName">Book Name:</string>
    <string name="bookDetailISBN">ISBN:</string>
    <string name="bookDetailAuthor">Author:</string>
    <string name="plaintext1">default</string>
    <string name="plaintext2">default</string>
    <string name="plaintext3">default</string>
    <string name="plaintext4">default</string>
    <string name="PeopleResult">Search Result On People</string>
    <string name="personName1">Personname</string>
    <string name="personName2">Person Name</string>
    <string name="personName3">Person Name</string>
    <string name="peopleResultNewSearch">New Search</string>
    <string name="peopleResultBack">Back</string>
    <string name="bookResultNewSearch">New Search</string>
    <string name="boolResultBack">Back to home</string>
    <string name="bookResult">Search Result For Book</string>
    <string name="bookName1">book Name1</string>
    <string name="bookName2">book Name2</string>
    <string name="bookName3">Book Name3</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_empty">emptyActivity</string>
    <string name="EditBookDetailBookName">Please enter the title</string>
    <string name="EditBookDetailISBN">Please enter the ISBN</string>
    <string name="EditBookDetailAuthor">Please enter the author</string>
    <string name="EditBookDetailDescription">Please enter comment of the book from your prospective ~</string>
    <string name="EditBookDetailDecriptionTitile">Description</string>
    <string name="EditBookDetailUpload">Upload Photo</string>
    <string name="requestViewRequestB">show requested</string>
    <string name="requestViewAcceptB">show accepted</string>

    <string name="title_activity_check_to_scan_borrow_book">check_to_scan_borrowBook</string>

    <string name="RateToOwnerUserName">Missing owner user name!</string>
    <string name="RateToOwnerUserDesciption">Missing user rating!</string>
    <string name="RateToOwnerUserRatePrompt">A number between 1 and 10</string>
    <string name="RateToOwnerUserCommentPrompt">Please enter comment about your lender. Is he be on time?Is he be on time?</string>
    <string name="RateToOwnerBookName">Missing Book Name!</string>
    <string name="RateToOwnerBookISBN">Missing ISBN!</string>
    <string name="RateToOwnerBookAuthor">Missing Author!</string>
    <string name="RateToOwnerBookComment">Is this book interesting? Do you like it?</string>
    <string name="RateToOwnerUserEmail">Missing lender email!</string>
    <string name="RateToOwnerCommentPrompt">Please enter a comment for the book owner.Is he on time for lending your book?</string>
    <string name="RateToBorrowerName">Missing Borrower Name!</string>
    <string name="RateToBorrowerUserEmail">Missing Borrower email!</string>
    <string name="RateToOwnerSaveButton">save</string>
    <string name="title_activity_maps_owner_set_location">Map</string>
    <string name="title_activity_maps_borrower_view">Map</string>
    <string name="loginPageHint">Don\'t have an account?</string>
    <string name="registerButton">register</string>
    <string name="signUp">signup</string>
    <string name="SearchUserDetailEmailHint">Email:</string>
    <string name="SearchUserDetailUserNameHint">User name:</string>
    <string name="SearchUserDetailPhoneHint">Phone:</string>
    <string name="SearchUserDetailAsAOwner">As a owner:</string>
    <string name="SearchUserDetailAsABorrowerHint">As a borrower:</string>
    <string name="SearchUserDetailEmail">Missing user email!</string>
    <string name="SearchUserDetailUserName">Missing user name!</string>
    <string name="SearchUserDetailBorrowerRating">Missing Rating!</string>
    <string name="SearchUserDetailLenderRating">Missing!</string>
    <string name="SearchUserDetailPhoneInput">Missing phone number!</string>
    <string name="SearchUserDetailLendBookTimeHint">Lend books:</string>
    <string name="SearchUserDetailLendBookTimeInput">Missing</string>
    <string name="SearchUserDetailBorrowerBookTimeHint">Borrow books:</string>
    <string name="SearchUserDetailBorrowBookTimeInput">Missing</string>
    <string name="see_more"><u>see more</u></string>
</resources>
