<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditBookDetail">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/Buttonsave"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bookDetailSave" />

        <Button
            android:id="@+id/ButtonUpload"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/EditBookDetailUpload" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textViewDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/EditBookDetailDecriptionTitile"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EditBookDetailDescription"
            android:inputType="text"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutForInfor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">>

        <LinearLayout
            android:id="@+id/LLBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/BookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="start"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/bookDetailBookName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/pt4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/EditBookDetailBookName"
                android:inputType="text"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLBookISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/BookISBN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="start"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/bookDetailISBN"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/pt3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/EditBookDetailISBN"
                android:inputType="text"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLBookAuthour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/BookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="start"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/bookDetailAuthor"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/pt2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/EditBookDetailAuthor"
                android:inputType="text"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>