<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchingUserDetail">

    <TextView
        android:id="@+id/searchUserDetailUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/SearchUserDetailUserName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchUserDetailUserName">

        <LinearLayout
            android:id="@+id/LLforImageLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/bookPhoto"
                android:layout_width="71dp"
                android:layout_height="105dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/pBookImage"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutForInfor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="top|start"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/LLforImageLocation"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/LLBookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/EmailHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/SearchUserDetailEmailHint"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/searchUserDetailUserEmailInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/SearchUserDetailEmail" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LLBookISBN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PhoneHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/SearchUserDetailPhoneHint"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/searchUserDetailPhoneInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/SearchUserDetailPhoneInput" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LLBookAuthour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BookAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/SearchUserDetailLendBookTimeHint"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/searchUserDetaillendBookTimeINput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/SearchUserDetailLendBookTimeInput" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LLBorrowerBookTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BorrowerBookTimeHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/SearchUserDetailBorrowerBookTimeHint"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/searchUserDetailBorrowerBookTimeInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/SearchUserDetailBorrowBookTimeInput" />
            </LinearLayout>


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/AsAOwnerLL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/AsAOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/SearchUserDetailAsAOwner"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/searchUserDetailOwnerRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SearchUserDetailLenderRating"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/ListViewOwner"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/AsAOwnerLL"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/AsAOwnerLL"
        app:layout_constraintTop_toBottomOf="@+id/AsAOwnerLL" />

    <LinearLayout
        android:id="@+id/AsABorrowerLL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/ListViewOwner"
        app:layout_constraintStart_toStartOf="@+id/ListViewOwner"
        app:layout_constraintTop_toBottomOf="@+id/ListViewOwner">

        <TextView
            android:id="@+id/AsABorrower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/SearchUserDetailAsABorrowerHint"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/searchUserDetaiBorrowerRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SearchUserDetailBorrowerRating"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:layout_width="368dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/AsABorrowerLL"
        app:layout_constraintStart_toStartOf="@+id/AsABorrowerLL"
        app:layout_constraintTop_toBottomOf="@+id/AsABorrowerLL" />

</android.support.constraint.ConstraintLayout>